--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
     "lib": ["ES2020", "DOM"],
     "rootDir": "./src"
   },
-  "include": ["src/**/*"],
+  "files": [
+    "src/index.ts",
+    "src/example.ts",
+    "src/types/intent.ts",
+    "src/types/field.ts",
+    "src/types/symbolic.ts",
+    "src/types/cognition.ts",
+    "src/types/ethics.ts",
+    "src/types/persona.ts"
+  ],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
