--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "docs": "typedoc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "collect": "node collect-data.js"
   },
   "keywords": [
     "intent",
@@ -42,6 +43,7 @@
     "jest": "^29.6.4",
     "prettier": "^3.0.2",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.25.0",
     "typescript": "^5.2.2"
   },
